fix spacing

--- a/kernel.css
+++ b/kernel.css
@@ -86,7 +86,7 @@
 /* Powercord */
 .pccompat-settings-pc-moduleManager-plugins-item.item-3XjbnG.themed-2-lozF {
   overflow: visible !important;
-  margin-top: 42.5px;
+  margin-top: 28px;
 }
 
 .pccompat-settings-pc-moduleManager-plugins-item.item-3XjbnG.themed-2-lozF::after {
@@ -108,7 +108,7 @@
 /* Better Discord */
 .bdcompat-settings-item-settings.item-3XjbnG.themed-2-lozF {
   overflow: visible !important;
-  margin-top: 42.5px;
+  margin-top: 28px;
 }
 
 .bdcompat-settings-item-settings.item-3XjbnG.themed-2-lozF::after {
